--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,6 @@
+$primaryColor: #557A55;
+$textWhite: #FFFFFF;
+$fontFam: Arial;
 
 
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -5,6 +8,10 @@
 img{
   width: 100%;
   height: auto;
+}
+
+.container-fluid{
+  padding: 0;
 }
 
 .logo{
@@ -18,6 +25,7 @@ img{
 
 nav{
   ul{
+
   }
 }
 
@@ -26,13 +34,19 @@ nav{
     width: 50%;
     margin-left: 25%;
     margin-top: 30px;
+    background-color: $primaryColor;
+    color: $textWhite;
+    font-family: $fontFam;
+    font-weight: bold;
+    height: 100px;
+    border-radius: 15px;
   }
 }
 
 .card{
   border: none;
   .card-img{
-    border-radius: 300px;
+    border-radius: 100%;
   }
 }
 
@@ -40,13 +54,27 @@ nav{
   justify-content: center;
 }
 
-@media screen and(min-width: 740px){
+@media screen and(min-width: 768px){
 
   nav{
     ul{
       li{
         font-size: 25px;
       }
+    }
+  }
+
+  #buttonContainer{
+    button{
+      margin-left: 0;
+      width: 25%;
+      margin-top: 30px;
+      background-color: $primaryColor;
+      color: $textWhite;
+      font-family: $fontFam;
+      font-weight: bold;
+      height: 100px;
+      border-radius: 20px;
     }
   }
 
