Kontakt personer sat op

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -59,9 +59,26 @@ nav{
 
 #kontaktContainer{
   @include flexCenter;
+
+  #kontaktIMG{
+    width: 70%;
+  }
+}
+#textHandler {
+  @include flexCenter;
+  #kontakt {
+    font-size: 14px;
+  }
 }
 
-
+#icons{
+  @include flexCenter(space-evenly);
+  font-size: 50px;
+  a{
+    color: black;
+    text-decoration: none;
+  }
+}
 
 @media screen and(min-width: 768px){
 
