--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,6 +9,10 @@ $fontFam: Arial;
   justify-content: $justify;
 }
 
+hr{
+  display: none;
+}
+
 img{
   width: 100%;
   height: auto;
@@ -16,6 +20,18 @@ img{
 
 .row{
   margin: 0;
+}
+
+#buttonWrapper{
+  width: 100%;
+}
+
+.hidden{
+  display: none;
+}
+
+.toggleFlex{
+  display: flex;
 }
 
 .container-fluid{
@@ -58,6 +74,10 @@ nav{
   }
 }
 
+.overskrifter{
+  color: $primaryColor;
+}
+
 #buttonContainer{
   button{
     width: 50%;
@@ -69,6 +89,12 @@ nav{
     font-weight: bold;
     height: 100px;
     border-radius: 15px;
+  }
+  #toggleElement{
+    width: 100%;
+  }
+  #toggle{
+    background-color: #86c086;
   }
 }
 
@@ -108,6 +134,11 @@ nav{
   }
 }
 
+.fa-comment{
+  color: black;
+  font-size: 20px;
+}
+
 #ansøgning{
   @include flexCenter;
   margin-top: 10%;
@@ -118,6 +149,13 @@ nav{
     border-radius: 5%;
     background-color: darkslategray;
   }
+}
+
+#toggleElement{
+}
+
+#active{
+  background-color: $primaryColor;
 }
 
 @media screen and(min-width: 768px){
@@ -149,7 +187,6 @@ nav{
       font-family: $fontFam;
       font-weight: bold;
       height: 100px;
-      border-radius: 20px;
     }
   }
 
@@ -180,7 +217,16 @@ nav{
 
 @media screen and(min-width: 1200px) {
 
+  hr{
+    margin: 0;
+    display: block;
+    background-color: #8b949b;
+  }
 
+  .headerimg{
+    width: 90%;
+    margin-left: 5%;
+  }
 
   .logo{
     width: 60vw;
