Sh regnskab done

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -202,6 +202,10 @@ nav{
 
 @media screen and(min-width: 768px) {
 
+  #kontakt{
+    min-height: 170px;
+  }
+
   #cards {
     padding-right: 20%;
     padding-left: 20%;
